tests/sema/fail/v7_fail_map_init_value_type.ep
# COMPILE_FAIL: map init value expected bool, got str
fun main(): void {
    let m = new map[str]bool { "ok": "yes" }
}
